syntax = "proto3";

option csharp_namespace = "GrpcCloudServiceTest";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetStatuses (StatusArgs) returns (stream Status);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message StatusArgs {
}

message Status {
  string msg = 1;
  int32 progress = 2;
}